--- a/wappsett.ui
+++ b/wappsett.ui
@@ -530,6 +530,23 @@ color: rgb(255, 255, 255);</string>
            </property>
           </widget>
          </item>
+         <item row="12" column="1">
+          <widget class="QLabel" name="label_21">
+           <property name="text">
+            <string>Время слота:</string>
+           </property>
+           <property name="alignment">
+            <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+           </property>
+          </widget>
+         </item>
+         <item row="10" column="3">
+          <widget class="QLabel" name="label_14">
+           <property name="text">
+            <string>с</string>
+           </property>
+          </widget>
+         </item>
          <item row="11" column="3">
           <widget class="QLabel" name="label_16">
            <property name="text">
@@ -537,32 +554,8 @@ color: rgb(255, 255, 255);</string>
            </property>
           </widget>
          </item>
-         <item row="12" column="1">
-          <widget class="QLabel" name="label_21">
-           <property name="text">
-            <string>Время слота </string>
-           </property>
-           <property name="alignment">
-            <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-           </property>
-          </widget>
-         </item>
-         <item row="17" column="3">
-          <widget class="QLabel" name="label_19">
-           <property name="text">
-            <string>с</string>
-           </property>
-          </widget>
-         </item>
-         <item row="6" column="3">
-          <widget class="QLabel" name="label_13">
-           <property name="text">
-            <string>с</string>
-           </property>
-          </widget>
-         </item>
          <item row="14" column="2">
-          <widget class="QLineEdit" name="e9_3">
+          <widget class="QLineEdit" name="e10">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
              <horstretch>0</horstretch>
@@ -582,8 +575,22 @@ color: rgb(255, 255, 255);</string>
            </property>
           </widget>
          </item>
-         <item row="10" column="3">
-          <widget class="QLabel" name="label_14">
+         <item row="14" column="3">
+          <widget class="QLabel" name="label_23">
+           <property name="text">
+            <string>c</string>
+           </property>
+          </widget>
+         </item>
+         <item row="17" column="3">
+          <widget class="QLabel" name="label_19">
+           <property name="text">
+            <string>с</string>
+           </property>
+          </widget>
+         </item>
+         <item row="6" column="3">
+          <widget class="QLabel" name="label_13">
            <property name="text">
             <string>с</string>
            </property>
@@ -955,20 +962,51 @@ color: rgb(255, 255, 255);</string>
            </property>
           </widget>
          </item>
-         <item row="14" column="3">
-          <widget class="QLabel" name="label_23">
+         <item row="15" column="1">
+          <widget class="QLabel" name="label_24">
            <property name="text">
-            <string>x10мс</string>
+            <string>Задержка включения реле ПУСК (0..120):</string>
+           </property>
+           <property name="alignment">
+            <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
            </property>
           </widget>
          </item>
          <item row="14" column="1">
-          <widget class="QLabel" name="label_24">
+          <widget class="QLabel" name="label_25">
            <property name="text">
-            <string>За</string>
+            <string>Время включения реле ПУСК (0..255):</string>
            </property>
            <property name="alignment">
             <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+           </property>
+          </widget>
+         </item>
+         <item row="15" column="2">
+          <widget class="QLineEdit" name="e11">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+           <property name="maximumSize">
+            <size>
+             <width>120</width>
+             <height>16777215</height>
+            </size>
+           </property>
+           <property name="font">
+            <font>
+             <pointsize>16</pointsize>
+            </font>
+           </property>
+          </widget>
+         </item>
+         <item row="15" column="3">
+          <widget class="QLabel" name="label_26">
+           <property name="text">
+            <string>c</string>
            </property>
           </widget>
          </item>
