--- a/pbsetup.ui
+++ b/pbsetup.ui
@@ -2,6 +2,9 @@
 <ui version="4.0">
  <class>PBsetup</class>
  <widget class="QDialog" name="PBsetup">
+  <property name="windowModality">
+   <enum>Qt::NonModal</enum>
+  </property>
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -9,6 +12,12 @@
     <width>400</width>
     <height>300</height>
    </rect>
+  </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
   </property>
   <property name="windowTitle">
    <string>Лог команд</string>
