15-04_24-09-2025-add_command_timeout_to_settings

--- a/wappsett.ui
+++ b/wappsett.ui
@@ -872,7 +872,7 @@ color: rgb(255, 255, 255);</string>
            </property>
           </widget>
          </item>
-         <item row="21" column="2">
+         <item row="23" column="2">
           <spacer name="verticalSpacer_3">
            <property name="orientation">
             <enum>Qt::Vertical</enum>
@@ -900,6 +900,39 @@ color: rgb(255, 255, 255);</string>
             </size>
            </property>
           </spacer>
+         </item>
+         <!-- Send command timeout setting -->
+         <item row="8" column="1">
+          <widget class="QLabel" name="label_sendtimeout">
+           <property name="text">
+            <string>Таймаут отправки команды (мс):</string>
+           </property>
+           <property name="alignment">
+            <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+           </property>
+          </widget>
+         </item>
+         <item row="8" column="2">
+          <widget class="QLineEdit" name="e13">
+           <property name="maximumSize">
+            <size>
+             <width>120</width>
+             <height>16777215</height>
+            </size>
+           </property>
+           <property name="font">
+            <font>
+             <pointsize>16</pointsize>
+            </font>
+           </property>
+          </widget>
+         </item>
+         <item row="8" column="3">
+          <widget class="QLabel" name="label_sendtimeout_units">
+           <property name="text">
+            <string>мс</string>
+           </property>
+          </widget>
          </item>
          <item row="11" column="1">
           <widget class="QLabel" name="label_15">
